--- a/app/src/main/res/layout/list_item_card_small.xml
+++ b/app/src/main/res/layout/list_item_card_small.xml
@@ -15,5 +15,23 @@
         android:layout_marginRight="@dimen/cardMarginHorizontal"
         android:layout_marginTop="@dimen/cardMarginVertical"
         app:cardPreventCornerOverlap="false"
-        app:contentPadding="0dp"></android.support.v7.widget.CardView>
+        app:contentPadding="0dp">
+
+
+
+
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:textColor="#000000"
+        android:id="@+id/textView"
+
+        android:layout_gravity="center" />
+
+    </android.support.v7.widget.CardView>
+
 </FrameLayout>
