--- a/app/src/main/res/layout/api_card.xml
+++ b/app/src/main/res/layout/api_card.xml
@@ -17,20 +17,30 @@
         app:cardPreventCornerOverlap="false"
         app:contentPadding="0dp">
 
-
-
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/api"
+            android:src="@drawable/api"
+            android:adjustViewBounds="true"
+            android:maxWidth="32dp"
+            android:maxHeight="32dp"
+            android:scaleType="fitCenter"
+            android:layout_gravity="left|center_vertical"
+            android:layout_marginLeft="10dp"
+            />
 
 
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="192dp"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
+        android:text="Sponsored API&apos;s: Twilio, Pebble, Edmodo, Firebase and many more! "
         android:textColor="#000000"
-        android:id="@+id/textView"
-
-        android:layout_gravity="center" />
+        android:id="@+id/api_list"
+        android:layout_gravity="center"
+        android:layout_marginLeft="10dp"
+        />
 
     </android.support.v7.widget.CardView>
 
