--- a/app/src/main/res/layout/map_card.xml
+++ b/app/src/main/res/layout/map_card.xml
@@ -22,16 +22,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/map"
-            android:src="@drawable/rohit"
+            android:src="@drawable/prize"
             android:layout_gravity="left|center_vertical"
             android:layout_marginLeft="10dp"
             android:adjustViewBounds="true"
-            android:maxWidth="55dp"
-            android:maxHeight="55dp"
-            android:scaleType="fitCenter"
-            />
-
-
+            android:maxWidth="50dp"
+            android:maxHeight="50dp"
+            android:scaleType="fitCenter" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -43,8 +40,7 @@
             android:textSize="25sp"
             android:layout_centerVertical="true"
             android:layout_alignRight="@+id/card_view"
-            android:layout_alignEnd="@+id/card_view"
-            />
+            android:layout_alignEnd="@+id/card_view" />
 
     </android.support.v7.widget.CardView>
 
