--- a/app/src/main/res/layout/api_card.xml
+++ b/app/src/main/res/layout/api_card.xml
@@ -32,7 +32,7 @@
 
 
 
-    <TextView
+        <co.hackingedu.ro.LatoTextView
         android:layout_width="192dp"
         android:layout_height="wrap_content"
         android:text="Sponsored API&apos;s: Twilio, Pebble, Edmodo, Firebase and many more! "
