--- a/app/src/main/res/layout/faq_card.xml
+++ b/app/src/main/res/layout/faq_card.xml
@@ -18,7 +18,7 @@
         app:cardPreventCornerOverlap="false"
         app:contentPadding="0dp">
 
-        <TextView
+        <co.hackingedu.ro.LatoTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
@@ -30,7 +30,7 @@
 
 
 
-    <TextView
+        <co.hackingedu.ro.LatoTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Text"
