--- a/app/src/main/res/layout/map_card.xml
+++ b/app/src/main/res/layout/map_card.xml
@@ -30,7 +30,7 @@
             android:maxHeight="50dp"
             android:scaleType="fitCenter" />
 
-        <TextView
+        <co.hackingedu.ro.LatoTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Map 1"
