Added back button to map screen

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,4 +31,14 @@
         <item name="color">@color/drawerArrowColor</item>
     </style>
 
+
+    <style name="WithBar" parent="android:Theme.Holo.Light.DarkActionBar">
+
+
+
+    </style>
+
+
+
+
 </resources>
