--- a/app/src/main/res/layout/faq_card.xml
+++ b/app/src/main/res/layout/faq_card.xml
@@ -6,7 +6,7 @@
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view"
+        android:id="@+id/faq_card_view"
         android:layout_width="match_parent"
         android:layout_height="125dp"
         android:layout_marginBottom="@dimen/cardMarginVertical"
