--- a/app/src/main/res/layout/map_card.xml
+++ b/app/src/main/res/layout/map_card.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
+        android:id="@+id/map_card_view"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         app:cardCornerRadius="2dp"
