--- a/app/src/main/res/layout/project_card.xml
+++ b/app/src/main/res/layout/project_card.xml
@@ -33,7 +33,7 @@
 
 
 
-        <co.hackingedu.ro.LatoTextView
+        <co.hackingedu.ro.style.LatoTextView
         android:layout_width="240dp"
         android:layout_height="wrap_content"
         android:text="Project must be submitted to ChallengePost by 10:30am or else team won’t be eligible for prizes."
