--- a/app/src/main/res/layout/schedule_card.xml
+++ b/app/src/main/res/layout/schedule_card.xml
@@ -18,7 +18,7 @@
         app:cardPreventCornerOverlap="false"
         app:contentPadding="0dp">
 
-        <co.hackingedu.ro.LatoTextView
+        <co.hackingedu.ro.style.LatoTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
@@ -28,7 +28,7 @@
             android:layout_gravity="center_horizontal|top"
             android:layout_marginTop="10dp"/>
 
-        <co.hackingedu.ro.LatoTextView
+        <co.hackingedu.ro.style.LatoTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Time | Location"
