--- a/app/src/main/res/layout/schedule_detail.xml
+++ b/app/src/main/res/layout/schedule_detail.xml
@@ -19,19 +19,18 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <co.hackingedu.ro.LatoTextView
+    <co.hackingedu.ro.style.LatoTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
         android:id="@+id/speaker_name"
         android:textColor="#000000"
+        android:layout_marginLeft="23dp"
+        android:layout_marginStart="23dp"
         android:layout_alignTop="@+id/speaker_image"
-        android:layout_toRightOf="@+id/speaker_image"
-        android:layout_toEndOf="@+id/speaker_image"
-        android:layout_marginLeft="93dp"
-        android:layout_marginStart="93dp"
-        android:layout_marginTop="32dp" />
+        android:layout_alignLeft="@+id/description"
+        android:layout_alignStart="@+id/description" />
 
 
     <View
@@ -44,7 +43,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="15dp" />
 
-    <co.hackingedu.ro.LatoTextView
+    <co.hackingedu.ro.style.LatoTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Text"
@@ -53,4 +52,15 @@
         android:layout_below="@+id/line_divide"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="28dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Medium Text"
+        android:id="@+id/time_location"
+        android:layout_marginBottom="22dp"
+        android:layout_alignBottom="@+id/speaker_image"
+        android:layout_alignLeft="@+id/speaker_name"
+        android:layout_alignStart="@+id/speaker_name" />
 </RelativeLayout>
