--- a/app/src/main/res/menu/menu_map_view_image.xml
+++ b/app/src/main/res/menu/menu_map_view_image.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="co.hackingedu.ro.MapViewImageActivity">
+    tools:context="co.hackingedu.ro.Activity.MapViewImageActivity">
 
 </menu>
