--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,9 +22,7 @@
         app:viewpager_headerAdditionalHeight="20dp"
         app:viewpager_displayToolbarWhenSwipe="true"
         app:viewpager_transparentToolbar="true"
-        app:viewpager_animatedHeaderImage="true"
-        />
+        app:viewpager_animatedHeaderImage="true" />
 
-    <include layout="@layout/drawer" />
 
 </android.support.v4.widget.DrawerLayout>
