--- a/app/src/main/res/layout/prize_card_recycle.xml
+++ b/app/src/main/res/layout/prize_card_recycle.xml
@@ -5,12 +5,11 @@
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/map_card_view"
+        android:id="@+id/prize_card_recycle"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="115dp"
         app:cardCornerRadius="2dp"
         app:cardElevation="2dp"
-        android:layout_marginBottom="@dimen/cardMarginVertical"
         android:layout_marginLeft="@dimen/cardMarginHorizontal"
         android:layout_marginRight="@dimen/cardMarginHorizontal"
         android:layout_marginTop="@dimen/cardMarginVertical"
@@ -21,7 +20,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/map"
+            android:id="@+id/sponsor_image"
             android:src="@drawable/prize"
             android:layout_gravity="left|center_vertical"
             android:layout_marginLeft="10dp"
@@ -33,14 +32,26 @@
         <co.hackingedu.ro.style.LatoTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Map 1"
+            android:text="Prize Name"
             android:textColor="#000000"
-            android:id="@+id/map_num"
+            android:id="@+id/prize_name"
             android:layout_gravity="center"
             android:textSize="25sp"
+            android:layout_marginBottom="25dp"
             android:layout_centerVertical="true"
-            android:layout_alignRight="@+id/card_view"
-            android:layout_alignEnd="@+id/card_view" />
+            android:layout_alignRight="@+id/prize_card_recycle"
+            android:layout_alignEnd="@+id/prize_card_recycle" />
+
+        <co.hackingedu.ro.style.LatoTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Prize Description"
+            android:id="@+id/prize_desc"
+            android:textColor="#8D8888"
+            android:layout_alignTop="@+id/prize_card_recycle"
+            android:layout_gravity="center"
+            android:layout_marginTop="25dp" />
+
 
     </android.support.v7.widget.CardView>
 
