camera top right

--- a/app/src/main/res/layout/map_card.xml
+++ b/app/src/main/res/layout/map_card.xml
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/map"
-            android:src="@drawable/prize"
+            android:src="@drawable/map"
             android:layout_gravity="left|center_vertical"
             android:layout_marginLeft="10dp"
             android:adjustViewBounds="true"
