--- a/app/src/main/res/layout/faq_card.xml
+++ b/app/src/main/res/layout/faq_card.xml
@@ -8,7 +8,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/faq_card_view"
         android:layout_width="match_parent"
-        android:layout_height="125dp"
+        android:layout_height="135dp"
         android:layout_marginBottom="@dimen/cardMarginVertical"
         android:layout_marginLeft="@dimen/cardMarginHorizontal"
         android:layout_marginRight="@dimen/cardMarginHorizontal"
@@ -18,19 +18,18 @@
         app:cardPreventCornerOverlap="false"
         app:contentPadding="0dp">
 
-        <co.hackingedu.ro.style.LatoTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Large Text"
-            android:id="@+id/question"
-            android:textColor="#000000"
-            android:layout_gravity="center_horizontal|top"
-            android:layout_marginTop="10dp"/>
+    <co.hackingedu.ro.style.LatoTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/question"
+        android:textColor="#000000"
+        android:layout_gravity="center_horizontal|top"
+        android:layout_marginTop="10dp"/>
 
 
-
-        <co.hackingedu.ro.style.LatoTextView
+    <co.hackingedu.ro.style.LatoTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Text"
@@ -38,7 +37,9 @@
         android:textColor="#8D8888"
         android:layout_alignTop="@+id/card_view"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp" />
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="30dp" />
 
 
     </android.support.v7.widget.CardView>
