--- a/app/src/main/res/layout/schedule_detail.xml
+++ b/app/src/main/res/layout/schedule_detail.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:id="@+id/speaker_image"
         android:src="@drawable/rohit"
         android:adjustViewBounds="true"
@@ -20,18 +20,16 @@
         android:layout_alignParentStart="true" />
 
     <co.hackingedu.ro.style.LatoTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="170dp"
+        android:layout_height="75dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
         android:id="@+id/speaker_name"
         android:textColor="#000000"
-        android:layout_alignTop="@+id/speaker_image"
-        android:layout_toRightOf="@+id/speaker_image"
-        android:layout_toEndOf="@+id/speaker_image"
-        android:layout_marginLeft="93dp"
-        android:layout_marginStart="93dp"
-        android:layout_marginTop="32dp" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="45dp"
+        android:layout_marginTop="50dp" />
 
 
     <View
@@ -52,5 +50,7 @@
         android:id="@+id/description"
         android:layout_below="@+id/line_divide"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="28dp" />
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="35dp" />
 </RelativeLayout>
