--- a/app/src/main/res/layout/camera_watermark.xml
+++ b/app/src/main/res/layout/camera_watermark.xml
@@ -1,40 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-
-    <FrameLayout
-        android:id="@+id/mySurfaceView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <co.hackingedu.ro.Camera.CapturePreview
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-        </co.hackingedu.ro.Camera.CapturePreview>
-
-    </FrameLayout>
-
-    <LinearLayout
-        android:layout_below="@id/mySurfaceView"
+    android:layout_height="fill_parent"
+    >
+    <SurfaceView
+        android:id="@+id/camerapreview"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:gravity="center">
-
-    </LinearLayout>
-
-    <ImageView android:id="@+id/myImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/logo_white"
-        android:layout_marginRight="41dp"
-        android:layout_marginEnd="41dp"
-        android:layout_marginBottom="109dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-</RelativeLayout>
+        />
+</LinearLayout>
