--- a/app/src/main/res/layout/activity_map_view_image.xml
+++ b/app/src/main/res/layout/activity_map_view_image.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="co.hackingedu.ro.Activity.MapViewImageActivity"
-    android:background="@drawable/rohit"
+    android:background="@drawable/sanmateo_map"
     android:touchscreenBlocksFocus="false"
     android:id="@+id/map_view_image_activity">
 </RelativeLayout>
