--- a/app/src/main/res/layout/control.xml
+++ b/app/src/main/res/layout/control.xml
@@ -5,11 +5,11 @@
     android:layout_height="fill_parent"
     android:gravity="bottom">
 
-    <Button
+    <ImageView
         android:id="@+id/takepicture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Take Picture"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/click"
         android:layout_gravity="center"
         android:layout_margin="10dp" />
 
