--- a/app/src/main/res/layout/control.xml
+++ b/app/src/main/res/layout/control.xml
@@ -3,7 +3,9 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:gravity="bottom">
+    android:gravity="bottom"
+    android:weightSum="1">
+
 
     <ImageView
         android:id="@+id/takepicture"
