--- a/app/src/main/res/layout/camera_watermark.xml
+++ b/app/src/main/res/layout/camera_watermark.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/camera_layout"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -10,6 +11,12 @@
         android:layout_height="wrap_content"
         />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:layout_gravity="center_horizontal"
+        android:visibility="invisible" />
 
 
 </LinearLayout>
