--- a/app/src/main/res/layout/project_card.xml
+++ b/app/src/main/res/layout/project_card.xml
@@ -36,7 +36,7 @@
         <co.hackingedu.ro.style.LatoTextView
         android:layout_width="240dp"
         android:layout_height="wrap_content"
-        android:text="Project must be submitted to http://www.devpost.com/hackingedu by 10:00am, Oct. 25th or else your team won’t be eligible for prizes."
+        android:text="Project must be submitted to http://www.devpost.hackingedu.com by 10:00am, Oct. 25th or else your team won’t be eligible for prizes."
         android:textColor="#000000"
         android:id="@+id/project_submission"
         android:layout_gravity="right|center_vertical"
@@ -45,6 +45,7 @@
         android:layout_centerVertical="true"
         android:layout_alignRight="@+id/card_view"
         android:layout_alignEnd="@+id/card_view"
+        android:autoLink="web"
         />
 
     </android.support.v7.widget.CardView>
