--- a/app/src/main/res/layout/sponsor_card_recycle.xml
+++ b/app/src/main/res/layout/sponsor_card_recycle.xml
@@ -51,7 +51,8 @@
             android:textColor="#8D8888"
             android:layout_alignTop="@+id/card_view"
             android:layout_gravity="center"
-            android:layout_marginTop="25dp" />
+            android:layout_marginTop="25dp"
+            android:autoLink="web"/>
 
     </android.support.v7.widget.CardView>
 
