--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,6 +5,9 @@
     <item android:id="@+id/action_camera" android:title="@string/action_camera"
         android:icon="@drawable/camera"
          app:showAsAction="always" />
+    <item android:id="@+id/action_help" android:title="@string/action_help"
+        android:icon="@drawable/help"
+        app:showAsAction="always" />
 
 
 </menu>
