--- a/app/src/main/res/layout/schedule_card.xml
+++ b/app/src/main/res/layout/schedule_card.xml
@@ -21,9 +21,10 @@
         <co.hackingedu.ro.style.LatoTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Headline_Event"
+            android:textSize="20sp"
             android:id="@+id/schedule_event"
+            android:gravity="center"
             android:textColor="#000000"
             android:layout_gravity="center_horizontal|top"
             android:layout_marginTop="10dp"/>
@@ -36,7 +37,7 @@
             android:textColor="#8D8888"
             android:layout_alignTop="@+id/card_view"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="25dp" />
 
     </android.support.v7.widget.CardView>
 
