--- a/app/src/main/res/layout/schedule_detail.xml
+++ b/app/src/main/res/layout/schedule_detail.xml
@@ -20,16 +20,16 @@
         android:layout_alignParentStart="true" />
 
     <co.hackingedu.ro.style.LatoTextView
-        android:layout_width="170dp"
-        android:layout_height="75dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
         android:text="Large Text"
         android:id="@+id/speaker_name"
         android:textColor="#000000"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_marginRight="45dp"
-        android:layout_marginTop="50dp" />
+        android:layout_marginTop="30dp" />
 
 
     <View
@@ -37,10 +37,10 @@
         android:layout_width="match_parent"
         android:layout_height= "1dp"
         android:background="#000000"
+        android:layout_marginTop="55dp"
         android:layout_below="@+id/speaker_image"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="15dp" />
+        android:layout_alignParentStart="true" />
 
     <co.hackingedu.ro.style.LatoTextView
         android:layout_width="wrap_content"
